[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/icons/circle-512.png" type="Texture" id=1]
[ext_resource path="res://ui/ui.gd" type="Script" id=2]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/panels/panels.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.254902, 0.254902, 0.254902, 0.392157 )

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pain_bar" type="TextureProgress" parent="."]
anchor_right = 0.133
anchor_bottom = 0.237
rect_clip_content = true
value = 40.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0, 0, 0, 0.235294 )
tint_progress = Color( 0, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="focus_bar" type="TextureProgress" parent="."]
anchor_top = 0.25
anchor_right = 0.133
anchor_bottom = 0.487
margin_right = 1.28
margin_bottom = 0.0799561
rect_clip_content = true
value = 70.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0, 0, 0, 0.235294 )
tint_progress = Color( 0.207843, 0.364706, 0.772549, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_label" type="RichTextLabel" parent="."]
anchor_left = 0.8
anchor_right = 1.0
margin_right = 26.0
margin_bottom = 326.0
text = "FPS: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="percentage_bar" type="ProgressBar" parent="."]
material = SubResource( 1 )
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.000244141
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_button" type="Button" parent="."]
anchor_left = 0.924
anchor_right = 1.0
anchor_bottom = 0.062
text = "Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug_info_label" type="Label" parent="."]
anchor_top = 0.7
anchor_right = 0.2
anchor_bottom = 0.805
margin_bottom = 0.199829

[node name="panels" parent="." instance=ExtResource( 4 )]

[node name="slots" type="GridContainer" parent="."]
anchor_left = 0.75
anchor_top = 0.5
anchor_right = 0.95
anchor_bottom = 0.85
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space1" type="Label" parent="slots"]
margin_top = 61.0
margin_right = 253.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="slot1" type="TextureRect" parent="slots"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="space2" type="Label" parent="slots"]
margin_left = 514.0
margin_right = 767.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="slot2" type="TextureRect" parent="slots"]
margin_top = 253.0
margin_right = 253.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="space3" type="Label" parent="slots"]
margin_left = 257.0
margin_top = 253.0
margin_right = 510.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="slot3" type="TextureRect" parent="slots"]
margin_left = 514.0
margin_top = 253.0
margin_right = 767.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="space4" type="Label" parent="slots"]
margin_top = 506.0
margin_right = 253.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="slot4" type="TextureRect" parent="slots"]
margin_left = 257.0
margin_top = 506.0
margin_right = 510.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="space5" type="Label" parent="slots"]
margin_left = 514.0
margin_top = 506.0
margin_right = 767.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="menu_button" to="." method="_on_menu_button_pressed"]
